fix overflow bug in version dropdown

--- a/djedi/static/djedi/themes/luke/theme.css
+++ b/djedi/static/djedi/themes/luke/theme.css
@@ -6359,6 +6359,8 @@ body.editor header .dropdown-menu {
   border-color: #666;
   text-shadow: none;
   min-width: 80px;
+  overflow: scroll;
+  max-height: 300px;
   margin-right: 45px;
 }
 body.editor header .dropdown-menu > li > a {
